--- a/index.html
+++ b/index.html
@@ -4,14 +4,87 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Web</title>
-    <link rel="shortcut icon" href="552448.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="Papirus-Team-Papirus-Apps-Weather.512.png"
+      type="image/x-icon"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <div class="weather-container">
         <div class="weather-row">
-            
+          <div class="weather-column">
+            <img src="Papirus-Team-Papirus-Apps-Weather.512.png" class="logo" />
+            <div class="weather-information">
+              <h1 class="degree">16</h1>
+              <div class="name-date">
+                <h2 class="name">London</h2>
+                <h3 class="date">06:09 - Monday, 9 Sep '24</h3>
+              </div>
+              <i class="ri-cloud-line weather-condition-icon"></i>
+            </div>
+          </div>
+          <div class="weather-column">
+            <form class="form">
+              <input
+                class="search"
+                type="search"
+                placeholder="Search Location..."
+                name="search"
+                value="Lahore"
+                autocomplete="off"
+              />
+              <button type="submit" class="ri-search-line search-btn"></button>
+            </form>
+
+            <h2 class="error"></h2>
+
+            <div>
+              <h4>Weather Details...</h4>
+              <h3 class="weather-condition-info">
+                THUNDERSTORM AND LIGHT DRIZZLE
+              </h3>
+            </div>
+
+            <div class="weather-more-information">
+              <span>
+                <h5>Temp max</h5>
+                <div class="temp-max-value">
+                  19 <i class="ri-temp-hot-line temp-max-icon"></i>
+                </div>
+              </span>
+              <span>
+                <h5>Temp min</h5>
+                <div class="temp-min-value">
+                  15 <i class="ri-temp-cold-line temp-min-icon"></i>
+                </div>
+              </span>
+              <span>
+                <h5>Humadity</h5>
+                <div class="humadity-value">
+                  58% <i class="ri-drop-line humadity-icon"></i>
+                </div>
+              </span>
+              <span>
+                <h5>Cloudy</h5>
+                <div class="cloudy-value">
+                  86% <i class="ri-cloud-line cloudy-icon"></i>
+                </div>
+              </span>
+              <span>
+                <h5>Wind</h5>
+                <div class="wind-value">
+                  5km/h <i class="ri-windy-line wind-icon"></i>
+                </div>
+              </span>
+            </div>
+          </div>
         </div>
       </div>
     </main>
