--- a/index.html
+++ b/index.html
@@ -55,31 +55,31 @@
             <div class="weather-more-information">
               <span>
                 <h5>Temp max</h5>
-                <div class="temp-max-value">
+                <div class="temp-max-div">
                   19 <i class="ri-temp-hot-line temp-max-icon"></i>
                 </div>
               </span>
               <span>
                 <h5>Temp min</h5>
-                <div class="temp-min-value">
+                <div class="temp-min-div">
                   15 <i class="ri-temp-cold-line temp-min-icon"></i>
                 </div>
               </span>
               <span>
                 <h5>Humadity</h5>
-                <div class="humadity-value">
+                <div class="humadity-div">
                   58% <i class="ri-drop-line humadity-icon"></i>
                 </div>
               </span>
               <span>
                 <h5>Cloudy</h5>
-                <div class="cloudy-value">
+                <div class="cloudy-div">
                   86% <i class="ri-cloud-line cloudy-icon"></i>
                 </div>
               </span>
               <span>
                 <h5>Wind</h5>
-                <div class="wind-value">
+                <div class="wind-div">
                   5km/h <i class="ri-windy-line wind-icon"></i>
                 </div>
               </span>
