--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 type="search"
                 placeholder="Search Location..."
                 name="search"
-                value="Lahore"
+                value="karachi"
                 autocomplete="off"
               />
               <button type="submit" class="ri-search-line search-btn"></button>
