--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="weather-column">
             <img src="Papirus-Team-Papirus-Apps-Weather.512.png" class="logo" />
             <div class="weather-information">
-              <h1 class="degree">16</h1>
+              <h1 class="temp">16</h1>
               <div class="name-date">
                 <h2 class="name">London</h2>
                 <h3 class="date">06:09 - Monday, 9 Sep '24</h3>
@@ -88,6 +88,6 @@
         </div>
       </div>
     </main>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
