--- a/index.html
+++ b/index.html
@@ -20,16 +20,12 @@
       <div class="weather-container">
         <div class="weather-row">
           <div class="weather-column">
-            <img src="Papirus-Team-Papirus-Apps-Weather.512.png" class="logo" />
-            <div class="weather-information">
-              <h1 class="temp">16</h1>
-              <div class="name-date">
-                <h2 class="name">London</h2>
-                <h3 class="date">06:09 - Monday, 9 Sep '24</h3>
-              </div>
-              <i class="ri-cloud-line weather-condition-icon"></i>
-            </div>
+            <h1 class="temp">16</h1>
+            <h2 class="name">London</h2>
+            <h3 class="date">06:09 - Monday, 9 Sep '24</h3>
+            <h4 class="weather-condition-short-info">Cloudy</h4>
           </div>
+
           <div class="weather-column">
             <form class="form">
               <input
@@ -37,52 +33,59 @@
                 type="search"
                 placeholder="Search Location..."
                 name="search"
-                value="karachi"
+                value="islamabad"
                 autocomplete="off"
               />
               <button type="submit" class="ri-search-line search-btn"></button>
             </form>
-
-            <h4 class="error"></h4>
-
-            <div>
-              <h4>Weather Details...</h4>
-              <h3 class="weather-condition-info">
-                THUNDERSTORM AND LIGHT DRIZZLE
-              </h3>
-            </div>
-
             <div class="weather-more-information">
-              <span>
-                <h5>Temp max</h5>
-                <div class="temp-max-div">
-                  19 <i class="ri-temp-hot-line temp-max-icon"></i>
-                </div>
-              </span>
-              <span>
-                <h5>Temp min</h5>
-                <div class="temp-min-div">
-                  15 <i class="ri-temp-cold-line temp-min-icon"></i>
-                </div>
-              </span>
-              <span>
-                <h5>Humadity</h5>
-                <div class="humadity-div">
-                  58% <i class="ri-drop-line humadity-icon"></i>
-                </div>
-              </span>
-              <span>
-                <h5>Cloudy</h5>
-                <div class="cloudy-div">
-                  86% <i class="ri-cloud-line cloudy-icon"></i>
-                </div>
-              </span>
-              <span>
-                <h5>Wind</h5>
-                <div class="wind-div">
-                  5km/h <i class="ri-windy-line wind-icon"></i>
-                </div>
-              </span>
+              <h3 class="weather-condition-long-info">
+                Thunderstorm Light Rain
+              </h3>
+              <div class="more-weather-info-spans">
+                <span class="more-weather-info-span">
+                  <h5>RealFeel</h5>
+                  <div class="feel-like-div">
+                    19 
+                  </div>
+                </span>
+                <span class="more-weather-info-span">
+                  <h5>Temp max</h5>
+                  <div class="temp-max-div">
+                    19
+                  </div>
+                </span>
+                <span class="more-weather-info-span">
+                  <h5>Temp min</h5>
+                  <div class="temp-min-div">
+                    15 
+                  </div>
+                </span>
+                <span class="more-weather-info-span">
+                  <h5>Humadity</h5>
+                  <div class="humadity-div">
+                    58% 
+                  </div>
+                </span>
+                <span class="more-weather-info-span">
+                  <h5>Cloudy</h5>
+                  <div class="cloudy-div">
+                    86% 
+                  </div>
+                </span>
+                <span class="more-weather-info-span">
+                  <h5>Wind</h5>
+                  <div class="wind-div">
+                    5km/h <i class="ri-windy-line wind-icon"></i>
+                  </div>
+                </span>
+                <span class="more-weather-info-span">
+                  <h5>Pressure</h5>
+                  <div class="pressure-div">
+                    5km/h <i class="ri-windy-line pressure-icon"></i>
+                  </div>
+                </span>
+              </div>
             </div>
           </div>
         </div>
