--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 type="search"
                 placeholder="Search Location..."
                 name="search"
-                value="islamabad"
+                value="multan"
                 autocomplete="off"
               />
               <button type="submit" class="ri-search-line search-btn"></button>
