--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="weather-container">
         <div class="weather-row">
           <div class="weather-column">
-            <h1 class="temp">16</h1>
-            <h2 class="name">London</h2>
+            <h1 class="temp">30</h1>
+            <h2 class="name">Karaci</h2>
             <h3 class="date">06:09 - Monday, 9 Sep '24</h3>
             <h4 class="weather-condition-short-info">Cloudy</h4>
           </div>
@@ -33,7 +33,7 @@
                 type="search"
                 placeholder="Search Location..."
                 name="search"
-                value="multan"
+                value="karachi"
                 autocomplete="off"
               />
               <button type="submit" class="ri-search-line search-btn"></button>
@@ -45,44 +45,34 @@
               <div class="more-weather-info-spans">
                 <span class="more-weather-info-span">
                   <h5>RealFeel</h5>
-                  <div class="feel-like-div">
-                    19 
-                  </div>
+                  <div class="feel-like-div">32</div>
                 </span>
                 <span class="more-weather-info-span">
                   <h5>Temp max</h5>
-                  <div class="temp-max-div">
-                    19
-                  </div>
+                  <div class="temp-max-div">30</div>
                 </span>
                 <span class="more-weather-info-span">
                   <h5>Temp min</h5>
-                  <div class="temp-min-div">
-                    15 
-                  </div>
+                  <div class="temp-min-div">28</div>
                 </span>
                 <span class="more-weather-info-span">
                   <h5>Humadity</h5>
-                  <div class="humadity-div">
-                    58% 
-                  </div>
+                  <div class="humadity-div">58%</div>
                 </span>
                 <span class="more-weather-info-span">
                   <h5>Cloudy</h5>
-                  <div class="cloudy-div">
-                    86% 
-                  </div>
+                  <div class="cloudy-div">86%</div>
                 </span>
                 <span class="more-weather-info-span">
                   <h5>Wind</h5>
                   <div class="wind-div">
-                    5km/h <i class="ri-windy-line wind-icon"></i>
+                    25km/h <i class="ri-windy-line wind-icon"></i>
                   </div>
                 </span>
                 <span class="more-weather-info-span">
                   <h5>Pressure</h5>
                   <div class="pressure-div">
-                    5km/h <i class="ri-windy-line pressure-icon"></i>
+                    1000hpa <i class="ri-windy-line pressure-icon"></i>
                   </div>
                 </span>
               </div>
