--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
         <div class="weather-row">
           <div class="weather-column">
             <h1 class="temp">30</h1>
-            <h2 class="name">Karachi</h2>
-            <h3 class="date">06:09 - Monday, 9 Sep '24</h3>
-            <h4 class="weather-condition-short-info">Cloudy</h4>
+            <h2 class="name">Karachi, Pakistan</h2>
+            <img
+              class="weather-condition-icon"
+            />
+            <h3 class="date">Monday, August 26, 2024 at 11:12 AM GMT+5</h3>
+            <h4 class="weather-condition-short-info">Rain</h4>
           </div>
 
           <div class="weather-column">
@@ -38,18 +41,18 @@
                 type="search"
                 placeholder="Search Location..."
                 name="search"
-                value="Karachi"
+                value="Ahmedabad"
                 autocomplete="off"
               />
               <button type="submit" class="ri-search-line search-btn"></button>
             </form>
             <div class="weather-more-information">
               <h3 class="weather-condition-long-info">
-                Thunderstorm Light Rain
+                Thunderstorm Heavy Rain
               </h3>
               <span class="more-weather-info-span">
                 <h5>RealFeel</h5>
-                <div class="feel-like-div">32</div>
+                <div class="feel-like-div">25</div>
               </span>
               <span class="more-weather-info-span">
                 <h5>Temp max</h5>
@@ -57,7 +60,7 @@
               </span>
               <span class="more-weather-info-span">
                 <h5>Temp min</h5>
-                <div class="temp-min-div">28</div>
+                <div class="temp-min-div">22</div>
               </span>
               <span class="more-weather-info-span">
                 <h5>Humadity</h5>
@@ -65,12 +68,12 @@
               </span>
               <span class="more-weather-info-span">
                 <h5>Cloudy</h5>
-                <div class="cloudy-div">86%</div>
+                <div class="cloudy-div">100%</div>
               </span>
               <span class="more-weather-info-span">
                 <h5>Wind</h5>
                 <div class="wind-div">
-                  25km/h <i class="ri-windy-line wind-icon"></i>
+                  40km/h <i class="ri-windy-line wind-icon"></i>
                 </div>
               </span>
               <span class="more-weather-info-span">
