--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
           <div class="weather-column">
             <h1 class="temp">30</h1>
             <h2 class="name">Karachi, Pakistan</h2>
-            <img
-              class="weather-condition-icon"
-            />
+            <img class="weather-condition-icon" />
             <h3 class="date">Monday, August 26, 2024 at 11:12 AM GMT+5</h3>
             <h4 class="weather-condition-short-info">Rain</h4>
           </div>
@@ -41,7 +39,7 @@
                 type="search"
                 placeholder="Search Location..."
                 name="search"
-                value="Ahmedabad"
+                value="Karachi"
                 autocomplete="off"
               />
               <button type="submit" class="ri-search-line search-btn"></button>
