--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                   40km/h <i class="ri-windy-line wind-icon"></i>
                 </div>
               </span>
-              <span class="more-weather-info-span">
+              <!-- <span class="more-weather-info-span">
                 <h5>Pressure</h5>
                 <div class="pressure-div">
                   1000hpa <i class="ri-windy-line pressure-icon"></i>
                 </div>
-              </span>
+              </span> -->
             </div>
           </div>
         </div>
