--- a/index.html
+++ b/index.html
@@ -44,43 +44,43 @@
               />
               <button type="submit" class="ri-search-line search-btn"></button>
             </form>
-            <div class="weather-more-information">
-              <h3 class="weather-condition-long-info">
+            <ul class="weather-more-information">
+              <li class="weather-condition-long-info">
                 Thunderstorm Heavy Rain
-              </h3>
-              <span class="more-weather-info-span">
+              </li>
+              <li class="more-weather-info-span">
                 <h5>RealFeel</h5>
                 <div class="feel-like-div">25</div>
-              </span>
-              <span class="more-weather-info-span">
+              </li>
+              <li class="more-weather-info-span">
                 <h5>Temp max</h5>
                 <div class="temp-max-div">30</div>
-              </span>
-              <span class="more-weather-info-span">
+              </li>
+              <li class="more-weather-info-span">
                 <h5>Temp min</h5>
                 <div class="temp-min-div">22</div>
-              </span>
-              <span class="more-weather-info-span">
+              </li>
+              <li class="more-weather-info-span">
                 <h5>Humadity</h5>
                 <div class="humadity-div">58%</div>
-              </span>
-              <span class="more-weather-info-span">
+              </li>
+              <li class="more-weather-info-span">
                 <h5>Cloudy</h5>
                 <div class="cloudy-div">100%</div>
-              </span>
-              <span class="more-weather-info-span">
+              </li>
+              <li class="more-weather-info-span">
                 <h5>Wind</h5>
                 <div class="wind-div">
                   40km/h <i class="ri-windy-line wind-icon"></i>
                 </div>
-              </span>
-              <!-- <span class="more-weather-info-span">
+              </li>
+              <li class="more-weather-info-span">
                 <h5>Pressure</h5>
                 <div class="pressure-div">
                   1000hpa <i class="ri-windy-line pressure-icon"></i>
                 </div>
-              </span> -->
-            </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
