--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather Web</title>
     <link
       rel="shortcut icon"
-      href="Favicon/favicon-icon.png"
+      href="images/favicon-icon.png"
       type="image/x-icon"
     />
     <link
